tests/error/addInteger-wrong-2nd-argument-list-integer-.uplc
(program 1.0.0[[(builtin addInteger)(con integer 10)](con list(integer) [42, 10, 53])])